Refactor SPI and USART into their own files
Made c and header files for using USART 3 and using SPI 2 to communicate with the gyroscope and included them in main.c

--- a/MDK-ARM/ECE6780_MiniProject.uvprojx
+++ b/MDK-ARM/ECE6780_MiniProject.uvprojx
@@ -409,6 +409,16 @@
               <FileType>1</FileType>
               <FilePath>../Core/Src/stm32f0xx_hal_msp.c</FilePath>
             </File>
+            <File>
+              <FileName>i3g4250d.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\i3g4250d.c</FilePath>
+            </File>
+            <File>
+              <FileName>usart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\usart.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
