--- a/Linear Touch Sensor/TSC_test/MDK-ARM/TSC_test.uvprojx
+++ b/Linear Touch Sensor/TSC_test/MDK-ARM/TSC_test.uvprojx
@@ -409,6 +409,11 @@
               <FileType>1</FileType>
               <FilePath>../Core/Src/stm32f0xx_hal_msp.c</FilePath>
             </File>
+            <File>
+              <FileName>tsc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\tsc.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -520,5 +525,14 @@
     </components>
     <files/>
   </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>TSC_test</LayName>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
